# demo3

./: CMakeLists.txt  Doxyfile  clang-uml.yml
.github/scripts/: discover_and_generate.py
.github/workflows/: generate-diagrams.yml
core/auth/: SessionManager.hpp
include/: Database.hpp  ShoppingCart.cpp  ShoppingCart.hpp
src/: main.cpp
src/database/: InventoryDB.cpp
src/orders/: OrderProcessor.hpp
